--- a/bicyclewebsite/awstranscription/templates/awstranscription/index.html
+++ b/bicyclewebsite/awstranscription/templates/awstranscription/index.html
@@ -12,21 +12,33 @@
 	<body class="bg-blue-50 font-serif leading-normal tracking-normal">
 		<div class="container mx-auto">
 			<section class="flex items-center justify-center h-20">
-				<h1 class="text-5xl text-blue-400">DFI Data Collection Portal</h1>
+				<h1 class="text-5xl text-blue-400">DFI Data Collection Portal Beta</h1>
 			</section>
 		</div>
 
 
-<div class="container mx-auto bg-blue-50">
-    {% if latest_session_list %}
-<ul>
+<div class="container mx-auto bg-blue-50 pl-2 justify-center">
+<table class="table-fixed container mx-auto bg-green-100 justify-center">
+	<tr>
+		<th class='w-1/3'>Session ID</th>
+		<th>Actions</th>
+		<th>Description</th>
+		{% if latest_session_list %}
 {% for session in latest_session_list %}
-<li><a href="{% url 'awstranscription:detail' session.sessionID %}">{{ session.participantID }}</a></li>    {% endfor %}
-</ul>
+<tr><td class="hover:underline p-2"><a href="{% url 'awstranscription:detail' session.sessionID %}" ><p class=" bg-green-400 rounded-lg text-center font-bold">Edit session {{ session.participantID }}</p></a></td><td><p class=" bg-red-300 rounded-lg text-center font-bold">delete</p></td></tr>    {% endfor %}
+<tr class="hover:underline"> <td class="hover:underline justify-center "><p class="bg-green-200 p-2 rounded-lg text-center">Add New Session</p></td></tr>
+
 {% else %}
-<p>No sessions are available.</p>
-{% endif %}
+<tr><p>No sessions are available.</p><td>add new session</td></tr>
+{% endif %}	</tr>
+	
+</table>
+
+
 </div>
+
+
+
 	</body>
 </html>
 
