--- a/bicyclewebsite/awstranscription/templates/awstranscription/upload.html
+++ b/bicyclewebsite/awstranscription/templates/awstranscription/upload.html
@@ -1,1 +1,25 @@
-<h1>upload</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio Input</title>
+</head>
+<body>
+    <form action="/awstranscription/{{ sessionID }}/upload/" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% for entry in form %}
+           <div>
+                {{ entry.label_tag }}
+           </div>
+           <div>
+               {{entry}}
+           </div>
+        {% endfor %}
+        <button>
+            Save!
+        </button>
+    </form>
+</body>
+</html>
