--- a/bicyclewebsite/awstranscription/templates/awstranscription/detail.html
+++ b/bicyclewebsite/awstranscription/templates/awstranscription/detail.html
@@ -1,7 +1,16 @@
+{% extends "base.html" %}
+
+{% block title %}My amazing blog{% endblock %}
+
+{% block content %}
 <h1>{{ session.participantID }}</h1>
 <ul>
 
     <li>{{ session.participantID }}</li>
 
 </ul>
+{% endblock %}
+
+
+
 
