--- a/bicyclewebsite/awstranscription/templates/awstranscription/index.html
+++ b/bicyclewebsite/awstranscription/templates/awstranscription/index.html
@@ -1,46 +1,30 @@
-{% load static tailwind_tags %}
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-    <title>DFI_DataCollection</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
-	</head>
+{% extends "base.html" %}
 
-	<body class="bg-blue-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-20">
-				<h1 class="text-5xl text-blue-400">DFI Data Collection Portal Beta</h1>
-			</section>
-		</div>
+{% block title %}index{% endblock %}
 
+{% block content %}
 
 <div class="container mx-auto bg-blue-50 pl-2 justify-center">
-<table class="table-fixed container mx-auto bg-green-100 justify-center">
-	<tr>
-		<th class='w-1/3'>Session ID</th>
-		<th>Actions</th>
-		<th>Description</th>
-		{% if latest_session_list %}
-{% for session in latest_session_list %}
-<tr><td class="hover:underline p-2"><a href="{% url 'awstranscription:detail' session.sessionID %}" ><p class=" bg-green-400 rounded-lg text-center font-bold">Edit session {{ session.participantID }}</p></a></td><td><p class=" bg-red-300 rounded-lg text-center font-bold">delete</p></td></tr>    {% endfor %}
-<tr class="hover:underline"> <td class="hover:underline justify-center "><p class="bg-green-200 p-2 rounded-lg text-center">Add New Session</p></td></tr>
-
-{% else %}
-<tr><p>No sessions are available.</p><td>add new session</td></tr>
-{% endif %}
+	<table class="table-fixed container mx-auto bg-green-100 justify-center">
+		<tr>
+			<th class='w-1/3'>Session ID</th>
+			<th>Actions</th>
+			<th>Description</th>
+			{% if latest_session_list %}
+	{% for session in latest_session_list %}
+	<tr><td class="hover:underline p-2 text-center"><a href="{% url 'awstranscription:detail' session.sessionID %}" ><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit session {{ session.participantID }}</button></a></td>
+		<td class ="text-center"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">delete</button></td></tr>    {% endfor %}
+	<tr class="hover:underline"> <td class="hover:underline text-center "><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Add New Session</button></td></tr>
 	
-</table>
-
-
-</div>
-
-
-
-	</body>
-</html>
+	{% else %}
+	<tr><p>No sessions are available.</p><td>add new session</td></tr>
+	{% endif %}
+		
+	</table>
+	
+	
+	</div>
+{% endblock %}
 
 
 
