--- a/bicyclewebsite/theme/templates/base.html
+++ b/bicyclewebsite/theme/templates/base.html
@@ -2,18 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+    <title>DFI_DataCollection</title>
+	<script src="https://cdn.tailwindcss.com"></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
+	<body class="bg-blue-50 font-sans leading-normal tracking-normal">
 		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
+			<section class="flex items-center justify-center h-20">
+				<h1 class="text-5xl text-blue-400">DFI Data Collection Portal Beta</h1>
 			</section>
 		</div>
+
+		<div id="content">
+			{% block content %}{% endblock %}
+		</div>
+
+
 	</body>
 </html>
+
+
+
+
+
