--- a/bicyclewebsite/awstranscription/templates/awstranscription/upload.html
+++ b/bicyclewebsite/awstranscription/templates/awstranscription/upload.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Input</title>
-</head>
-<body>
-    <form action="/awstranscription/{{ sessionID }}/upload/" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% for entry in form %}
-           <div>
-                {{ entry.label_tag }}
-           </div>
-           <div>
-               {{entry}}
-           </div>
-        {% endfor %}
-        <button>
-            Save!
-        </button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Detail{% endblock %}
+
+{% block content %}
+<form action="/awstranscription/{{ sessionID }}/upload/" method="POST" enctype="multipart/form-data" class ="pl-10">
+    {% csrf_token %}
+    {% for entry in form %}
+       <div> 
+            {{ entry.label_tag }}
+       </div>
+       <div>
+           
+           {{entry}}
+       </div>
+    {% endfor %}
+    <button>
+        Save!
+    </button>
+</form>
+
+{% endblock %}
+
