--- a/bicyclewebsite/awstranscription/templates/awstranscription/detail.html
+++ b/bicyclewebsite/awstranscription/templates/awstranscription/detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 		<div class="container mx-auto bg-blue-50 pl-2 justify-center">
-            <table class="table-auto">
+            <table class="table-fixed container mx-auto bg-green-100 justify-center">
                 <tr>
                     <th>Field</th><th>Value</th>
                 </tr>
