--- a/bicyclewebsite/theme/templates/base.html
+++ b/bicyclewebsite/theme/templates/base.html
@@ -14,8 +14,22 @@
 		<div class="container mx-auto">
 			<section class="flex items-center justify-center h-20">
 				<h1 class="text-5xl text-blue-400">DFI Data Collection Portal Beta</h1>
+				
 			</section>
 		</div>
+		<div class="columns-2 justify-end text-right">
+			
+				<h3 class="text-right bg-green-400 max-w-10" >Logged in as {{ user.username|default:'Guest' }}</h3>
+			
+			
+				{% if user.is_authenticated %}
+					<a href="{% url 'logout' %}" class="max-w-10"><button class="bg-red-800 text-white rounded-md p-3">Logout</button></a>
+				{% else %}
+					<a href="{% url 'login' %}" class="max-w-10">Login</a>
+				{% endif %}
+			
+		</div>
+
 
 		<div id="content">
 			{% block content %}{% endblock %}
