--- a/bicyclewebsite/awstranscription/templates/registration/login.html
+++ b/bicyclewebsite/awstranscription/templates/registration/login.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Login</h2>
+
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Login">
+    <input type="submit" value="Log in" class="bg-indigo-400 rounded-md pl-3 pr-3">
 </form>
 
-<a href="{% url 'awstranscription:index' %}">Back to Index view</a>
+<!-- <a href="{% url 'awstranscription:index' %}">Back to Index view</a> -->
 {% endblock %}
