--- a/bicyclewebsite/theme/templates/base.html
+++ b/bicyclewebsite/theme/templates/base.html
@@ -11,26 +11,36 @@
 	</head>
 
 	<body class="bg-blue-50 font-sans leading-normal tracking-normal">
-		<div class="container mx-auto">
+		<div class="container mx-auto p-3">
 			<section class="flex items-center justify-center h-20">
-				<h1 class="text-5xl text-blue-400 justify-between">DFI Data Collection Portal Beta</h1>
+				<h1 class="text-3xl text-blue-400 justify-between">DFI Data Collection Portal Beta</h1>
 				
 			</section>
 		</div>
 		<div class="flex bg-green-400">
-			<div class="w-3/4 pl-5">
+			<div class="w-1/2 pl-5">
 				<span class="max-w-10 align-middle text-left">
 					<a href="{% url 'awstranscription:index' %}" class="max-w-10"><button class="bg-green-800 text-white rounded-md p-3 ">Home</button></a>
 				</span>
 			</div>
-			<div class="justify-end">
-				<span class="text-right max-w-10" >Logged in as {{ user.username|default:'Guest' }}</span>
+			<div class="w-1/2 pr-5">
+				{% if user.is_authenticated %}
+				<p class="text-right max-w-10 align-right p-3" >Logged in as {{ user.username|default:'Guest' }}</p>
+					
+				{% else %}
+				<p class="align-middle p-3">not logged in</p>
+					
+				{% endif %}
+			</div>
+			
+			<div class="justify-end pr-5">
 						
 						
 							{% if user.is_authenticated %}
+							
 								<a href="{% url 'logout' %}" class="max-w-10"><button class="bg-red-800 text-white rounded-md p-3 ">Logout</button></a>
 							{% else %}
-								<a href="{% url 'login' %}" class="max-w-10">Login</a>
+								<a href="{% url 'login' %}" class="max-w-10"><button class="bg-red-800 text-white rounded-md p-3 ">Log in</button></a>
 							{% endif %}
 
 			</div>
