--- a/bicyclewebsite/dataportal/templates/registration/login.html
+++ b/bicyclewebsite/dataportal/templates/registration/login.html
@@ -9,5 +9,5 @@
     <input type="submit" value="Log in" class="bg-indigo-400 rounded-md pl-3 pr-3">
 </form>
 
-<!-- <a href="{% url 'awstranscription:index' %}">Back to Index view</a> -->
+<!-- <a href="{% url 'dataportal:index' %}">Back to Index view</a> -->
 {% endblock %}
