--- a/bicyclewebsite/theme/templates/base.html
+++ b/bicyclewebsite/theme/templates/base.html
@@ -20,7 +20,7 @@
 		<div class="flex bg-green-400">
 			<div class="w-1/2 pl-5">
 				<span class="max-w-10 align-middle text-left">
-					<a href="{% url 'awstranscription:index' %}" class="max-w-10"><button class="bg-green-800 text-white rounded-md p-3 ">Home</button></a>
+					<a href="{% url 'dataportal:index' %}" class="max-w-10"><button class="bg-green-800 text-white rounded-md p-3 ">Home</button></a>
 				</span>
 			</div>
 			<div class="w-1/2 pr-5">
