added new data fields

--- a/bicyclewebsite/dataportal/templates/dataportal/detail.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/detail.html
@@ -22,6 +22,22 @@
                     <td>Video File</td>
                     <td>{{ videoInput.fileName }}</td>
                 </tr>
+                <tr>   
+                    <td>HRV</td>
+                    <td>{{ hRV.fileName }}</td>
+                </tr>
+                <tr>   
+                    <td>Skin Conductance File</td>
+                    <td>{{ skinConductance.fileName }}</td>
+                </tr>
+                <tr>   
+                    <td>Fitbit File</td>
+                    <td>{{ fitbit.fileName }}</td>
+                </tr>
+                <tr>   
+                    <td>GPS File</td>
+                    <td>{{ gPS.fileName }}</td>
+                </tr>
                 
             </table>
             
