--- a/bicyclewebsite/dataportal/templates/dataportal/index.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/index.html
@@ -12,7 +12,7 @@
 			<th>Description</th>
 			{% if latest_session_list %}
 	{% for session in latest_session_list %}
-	<tr><td class="hover:underline p-2 text-center"><a href="{% url 'dataportal:detail' session.sessionID %}" ><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit session {{ session.participantID }}</button></a></td>
+	<tr><td class="hover:underline p-2 text-center"><a href="{% url 'dataportal:detail' session.sessionID %}" ><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit session {{ session.sessionID }}</button></a></td>
 		<td class ="text-center"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">delete</button></td></tr>    {% endfor %}
 	<tr class="hover:underline"> <td class="hover:underline text-center "><a href="{% url 'dataportal:newSession' %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Add New Session</button></a> </td></tr>
 	
