added multi threading

--- a/bicyclewebsite/dataportal/templates/dataportal/detail.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/detail.html
@@ -38,6 +38,10 @@
                     <td>GPS File</td>
                     <td>{{ gPS.fileName }}</td>
                 </tr>
+                <tr>   
+                    <td>results File</td>
+                    <td>{{ results.fileName }}</td>
+                </tr>
                 
             </table>
             
