updated html and added gen and delete views

--- a/bicyclewebsite/dataportal/templates/dataportal/index.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/index.html
@@ -13,7 +13,13 @@
 			{% if latest_session_list %}
 	{% for sessionID, results in status.items %}
 	<tr><td class="hover:underline p-2 text-center"><a href="{% url 'dataportal:detail' sessionID %}" ><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit session {{ sessionID }}</button></a></td>
-		<td class ="text-center"><a href="{% url 'dataportal:generate_results' sessionID %}"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">generate results</button></a></td>
+		<td class ="text-center">
+			{% if results == 'no results' %}
+			<a href="{% url 'dataportal:generate_results' sessionID %}"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">generate results</button></a>
+			{% else %}
+			<a href="{% url 'dataportal:delete_results' sessionID %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">delete results</button></a>
+			{% endif %}
+		</td>
 		<td class ="text-center"><a href="{% url 'dataportal:detail' sessionID %}"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">{{ results }}</button></a></td>
 	</tr>    {% endfor %}	
 
