--- a/bicyclewebsite/dataportal/templates/dataportal/generate_results.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/generate_results.html
@@ -5,22 +5,9 @@
 {% block content %}
 
 <div class="container mx-auto bg-blue-50 pl-2 justify-center">
-	<table class="table-fixed container mx-auto bg-green-100 justify-center">
-		<tr>
-			<th class='w-1/3'>Session ID</th>
-			<th class='w-1/3'>action</th>
-			{% if latest_session_list %}
-	{% for session in latest_session_list %}
-	<tr><td class="hover:underline p-2 text-center"><a href="{% url 'dataportal:detail' session.sessionID %}" ><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit session {{ session.sessionID }}</button></a></td>
-		<td class ="text-center"><a href="{% url 'dataportal:newSession' %}"></a><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">generate results</button></a></td></tr>    {% endfor %}
-	<tr class="hover:underline"> <td class="hover:underline text-center "><a href="{% url 'dataportal:newSession' %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Add New Session</button></a> </td></tr>
-	
-	{% else %}
-	<tr><p>No sessions are available.</p><td><a href="{% url 'dataportal:newSession' %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Add New Session</button></a></td></tr>
-	{% endif %}
-		
-	</table>
-	
+<p class ="justify-center font-bold">
+	results are being generated. Click Home to return. 
+</p>
 	
 	</div>
 {% endblock %}
