--- a/bicyclewebsite/dataportal/templates/dataportal/detail.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/detail.html
@@ -31,8 +31,16 @@
                     <td>{{ skinConductance.fileName }}</td>
                 </tr>
                 <tr>   
-                    <td>Fitbit File</td>
-                    <td>{{ fitbit.fileName }}</td>
+                    <td>Empatica_EDA File</td>
+                    <td>{{ empatica_EDA.fileName }}</td>
+                </tr>
+                <tr>   
+                    <td>Empatica_TEMP File</td>
+                    <td>{{ empatica_TEMP.fileName }}</td>
+                </tr>
+                <tr>   
+                    <td>text File</td>
+                    <td>{{ textFile.fileName }}</td>
                 </tr>
                 <tr>   
                     <td>GPS File</td>
