--- a/bicyclewebsite/dataportal/templates/dataportal/index.html
+++ b/bicyclewebsite/dataportal/templates/dataportal/index.html
@@ -37,6 +37,41 @@
 	{% endif %}
 		
 	</table>
+
+
+
+	<table class="table-fixed container mx-auto bg-green-100 justify-center">
+		<tr>
+			<th class='w-1/3'>Session ID</th>
+			<th class='w-1/3'>action</th>
+			<th class='w-1/3'>results status</th>
+			{% if latest_raw_session_list %}
+	{% for sessionID, results in raw_status.items %}
+	<tr><td class="hover:underline p-2 text-center"><a href="{% url 'dataportal:raw_detail' sessionID %}" ><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit session {{ sessionID }}</button></a></td>
+		<td class ="text-center">
+			{% if results == 'no results' %}
+			<a href="{% url 'dataportal:generate_raw_results' sessionID %}"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">generate raw results</button></a>
+			{% else %}
+			<a href="{% url 'dataportal:delete_results' sessionID %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">delete results</button></a>
+			{% endif %}
+		</td>
+		<td class ="text-center">
+			{% if results == 'no results' %}
+			<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">{{ results }}</button>
+			{% else %}
+			<a href="{% url 'dataportal:download_raw_results' sessionID %}"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">{{ results }}</button></a>
+			{% endif %}
+			
+		</td>
+	</tr>    {% endfor %}	
+
+		<tr class="hover:underline"> <td class="hover:underline text-center "><a href="{% url 'dataportal:new_raw_session' %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Add New Session</button></a> </td></tr>
+	
+	{% else %}
+	<tr><p>No sessions are available.</p><td><a href="{% url 'dataportal:new_raw_session' %}"><button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Add New Session</button></a></td></tr>
+	{% endif %}
+		
+	</table>
 	
 	
 	</div>
